--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
     <!-- fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
-        <!-- slider css-->
+    <!-- slider css-->
     <link rel="stylesheet" type="text/css" href="css/slick.css" />
     <link rel="stylesheet" type="text/css" href="css/slick-theme.css" />
     <!-- own css -->
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/responsive.css">
 </head>
 
 <body>
@@ -56,13 +57,19 @@
                         </a>
                     </ul>
                 </div>
-                <div class="nav_icon_box">
-                    <a href="#" class="flex instagram">
-                        <i class="fa-brands fa-instagram"></i>
-                    </a>
-                    <a href="#" class="flex facebook">
-                        <i class="fa-brands fa-facebook-f"></i>
-                    </a>
+                <div class="toggleMenu">
+                    <div class="nav_icon_box">
+                        <a href="#" class="flex instagram">
+                            <i class="fa-brands fa-instagram"></i>
+                        </a>
+                        <a href="#" class="flex facebook">
+                            <i class="fa-brands fa-facebook-f"></i>
+                        </a>
+                    </div>
+
+                    <button class="toggleBtn"><i class="fa-solid fa-bars"></i></button>
+
+
                 </div>
             </div>
         </div>
@@ -91,8 +98,8 @@
                 </div>
                 <div class="banner_right">
                     <div class="banner_imgbox">
-                        <img src="assets/jonathan.png" alt="">
-                        <img src="assets/jhonny.png" alt="">
+                        <img src="assets/banner1.png" alt="">
+                        <img src="assets/banner2.png" alt="">
                     </div>
 
                 </div>
@@ -117,21 +124,21 @@
                 </div>
                 <div class="quality_box">
                     <div class="flex iconBox quality_iconBox">
-                        <i class="fa-solid fa-sack-dollar"></i>
-                    </div>
-                    <div class="quality_textBox">
-                        <h1>Affordable</h1>
-                        <p>Give you low prices with the best service
-                        </p>
-                    </div>
-                </div>
-                <div class="quality_box">
-                    <div class="flex iconBox quality_iconBox">
                         <i class="fa-solid fa-briefcase"></i>
                     </div>
                     <div class="quality_textBox">
                         <h1>Professional</h1>
                         <p>We have a professional team ready to help solve your problem
+                        </p>
+                    </div>
+                </div>
+                <div class="quality_box">
+                    <div class="flex iconBox quality_iconBox">
+                        <i class="fa-solid fa-sack-dollar"></i>
+                    </div>
+                    <div class="quality_textBox">
+                        <h1>Affordable</h1>
+                        <p>Give you low prices with the best service
                         </p>
                     </div>
                 </div>
@@ -157,10 +164,10 @@
                     <div class="about_imgBox">
                         <div class="item1">
                             <img src="assets/about-1.jpg" alt="about-1">
-                            <img src="assets/about-3.jpg" alt="about-3">
+                            <img src="assets/about-2.jpg" alt="about-3">
                         </div>
                         <div class="item2">
-                            <img src="assets/about-2.jpg" alt="about-2">
+                            <img src="assets/about-3.png" alt="about-2">
                         </div>
                     </div>
                 </div>
@@ -314,28 +321,32 @@
             <div class="slider">
                 <div class="flex slide">
                     <div class="item">
-                        <img src="assets/panda.jpg" alt="panda">
+                        <img src="assets/panda (2).jpg" alt="">
+                        <!-- <img src="/assets/panda (2).jpg" alt="panda"> -->
                     </div>
                 </div>
                 <div class="slide">
                     <div class="item">
-                        <img src="assets/panda4.jpg" alt="panda4">
+                        <img src="assets/panda (2).jpg" alt="">
+                        <!-- <img src="/assets/panda (2).jpg" alt="panda4"> -->
                     </div>
                 </div>
                 <div class="slide">
                     <div class="item">
-                        <img src="assets/panda3.jpg" alt="panda3">
+                        <img src="assets/panda (2).jpg" alt="">
+                        <!-- <img src="/assets/panda (2).jpg" alt="panda3"> -->
                     </div>
                 </div>
                 <div class="slide">
                     <div class="item">
-
-                        <img src="assets/panda2.jpeg" alt="panda2">
+                        <img src="assets/panda (2).jpg" alt="">
+                        <!-- <img src="/assets/panda (2).jpgg" alt="panda2"> -->
                     </div>
                 </div>
                 <div class="slide">
                     <div class="item">
-                        <img src="assets/panda5.jpeg" alt="panda5">
+                        <img src="assets/panda (2).jpg" alt="">
+                        <!-- <img src="/assets/panda (2).jpgg" alt="panda5"> -->
                     </div>
                 </div>
             </div>
@@ -367,16 +378,16 @@
                     <img src="assets/facebook-5.svg" alt="">
                 </div>
                 <div class="client">
-                    <img src="assets/faze-clan.svg" alt="">
+                    <img src="assets/facebook-5.svg" alt="">
                 </div>
                 <div class="client">
                     <img src="assets/aliexpress-logo.svg" alt="">
                 </div>
                 <div class="client">
-                    <img src="assets/logo-lg.svg" alt="">
+                    <img src="assets/marshall-logo.svg" alt="">
                 </div>
                 <div class="client">
-                    <img src="assets/puma-logo.svg" alt="">
+                    <img src="assets/facebook-5.svg" alt="">
                 </div>
                 <div class="client">
                     <img src="assets/royal-enfield-logo-1.svg" alt="">
@@ -388,19 +399,19 @@
                     <img src="assets/youtube-6.svg" alt="">
                 </div>
                 <div class="client">
-                    <img src="assets/louis-vuitton-1.svg" alt="">
+                    <img src="assets/aliexpress-logo.svg" alt="">
                 </div>
                 <div class="client">
-                    <img src="assets/al-nassr-saudi-7725.svg" alt="">
+                    <img src="assets/marshall-logo.svg" alt="">
                 </div>
                 <div class="client">
-                    <img src="assets/fly-emirates.svg" alt="">
+                    <img src="assets/aliexpress-logo.svg" alt="">
                 </div>
                 <div class="client">
-                    <img src="assets/asus-rog-1.svg" alt="">
+                    <img src="assets/marshall-logo.svg" alt="">
                 </div>
                 <div class="client">
-                    <img src="assets/intel.svg" alt="">
+                    <img src="assets/facebook-5.svg" alt="">
                 </div>
             </div>
 
@@ -444,7 +455,7 @@
         </div>
     </section>
     <!-- ========== partners end ========== -->
-    <!-- ========== team start ========== -->
+    <!-- ========== ourteam start ========== -->
     <section id="ourteam">
         <div class="container">
             <div class="flex title">
@@ -471,67 +482,67 @@
                         <div class="flex teamImg">
                             <div class="flex linkOverlay">
                             </div>
-                            <img src="assets/cr7.png" alt="">
+                            <img src="assets/team1.png" alt="">
                         </div>
-                        <h1>Cristiano Ronaldo</h1>
-                        <p>Forward</p>
+                        <h1>Philip Luis</h1>
+                        <p>Production Head</p>
                     </div>
                     <div class="teamSlide">
                         <div class="flex teamImg">
                             <div class="flex linkOverlay">
                             </div>
-                            <img src="assets/cr7.png" alt="">
+                            <img src="assets/team1.png" alt="">
                         </div>
-                        <h1>Cristiano Ronaldo</h1>
-                        <p>Forward</p>
+                        <h1>Philip Luis</h1>
+                        <p>Production Head</p>
                     </div>
                     <div class="teamSlide">
                         <div class="flex teamImg">
                             <div class="flex linkOverlay">
                             </div>
-                            <img src="assets/cr7.png" alt="">
+                            <img src="assets/team1.png" alt="">
                         </div>
-                        <h1>Cristiano Ronaldo</h1>
-                        <p>Forward</p>
+                        <h1>Philip Luis</h1>
+                        <p>Production Head</p>
                     </div>
                     <div class="teamSlide">
                         <div class="flex teamImg">
                             <div class="flex linkOverlay"></div>
-                            <img src="assets/cr7.png" alt="">
+                            <img src="assets/team1.png" alt="">
                         </div>
-                        <h1>Cristiano Ronaldo</h1>
-                        <p>Forward</p>
+                        <h1>Philip Luis</h1>
+                        <p>Production Head</p>
                     </div>
                     <div class="teamSlide">
                         <div class="teamImg">
                             <div class="linkOverlay"></div>
-                            <img src="assets/cr7.png" alt="">
+                            <img src="assets/team1.png" alt="">
                         </div>
-                        <h1>Cristiano Ronaldo</h1>
-                        <p>Forward</p>
+                        <h1>Philip Luis</h1>
+                        <p>Production Head</p>
                     </div>
                     <div class="teamSlide">
                         <div class="flex teamImg">
                             <div class="flex linkOverlay"></div>
-                            <img src="assets/cr7.png" alt="">
+                            <img src="assets/team1.png" alt="">
                         </div>
-                        <h1>Cristiano Ronaldo</h1>
-                        <p>Forward</p>
+                        <h1>Philip Luis</h1>
+                        <p>Production Head</p>
                     </div>
                     <div class="teamSlide">
                         <div class="flex teamImg">
                             <div class="flex linkOverlay"></div>
-                            <img src="assets/cr7.png" alt="">
+                            <img src="assets/team1.png" alt="">
                         </div>
-                        <h1>Cristiano Ronaldo</h1>
-                        <p>Forward</p>
+                        <h1>Philip Luis</h1>
+                        <p>Production Head</p>
                     </div>
                 </div>
             </div>
         </div>
 
     </section>
-    <!-- ========== team end ========== -->
+    <!-- ========== ourteam end ========== -->
     <!-- ========== cv start ========== -->
     <section id="cv">
         <div class="container">
@@ -574,7 +585,7 @@
                 </p>
             </div>
             <div class="flex contactLinks">
-                <div class="flex contactItem">
+                <div class="flex contactItem fe">
                     <div class="flex iconBox contactIcon">
                         <i class="fa-solid fa-phone"></i>
                     </div>
@@ -584,7 +595,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="flex contactItem">
+                <div class="flex contactItem fc">
                     <div class="flex iconBox contactIcon">
                         <i class="fa-solid fa-envelope"></i>
                     </div>
@@ -647,10 +658,19 @@
             slidesToShow: 3,
             slidesToScroll: 1,
             autoplay: true,
-            autoplaySpeed: 1500,
+            autoplaySpeed: 2000,
             dots: true,
             arrows: false,
             pauseOnHover: true,
+            responsive: [
+                {
+                    breakpoint: 400,
+                    settings: {
+                        pauseOnHover: false,
+                        slidesToShow: 1
+                    }
+                }
+            ]
 
         });
     </script>
