--- a/index.html
+++ b/index.html
@@ -322,31 +322,31 @@
                 <div class="flex slide">
                     <div class="item">
                         <img src="assets/panda (2).jpg" alt="">
-                        <!-- <img src="/assets/panda (2).jpg" alt="panda"> -->
+
                     </div>
                 </div>
                 <div class="slide">
                     <div class="item">
                         <img src="assets/panda (2).jpg" alt="">
-                        <!-- <img src="/assets/panda (2).jpg" alt="panda4"> -->
+
                     </div>
                 </div>
                 <div class="slide">
                     <div class="item">
                         <img src="assets/panda (2).jpg" alt="">
-                        <!-- <img src="/assets/panda (2).jpg" alt="panda3"> -->
+
                     </div>
                 </div>
                 <div class="slide">
                     <div class="item">
                         <img src="assets/panda (2).jpg" alt="">
-                        <!-- <img src="/assets/panda (2).jpgg" alt="panda2"> -->
+
                     </div>
                 </div>
                 <div class="slide">
                     <div class="item">
                         <img src="assets/panda (2).jpg" alt="">
-                        <!-- <img src="/assets/panda (2).jpgg" alt="panda5"> -->
+
                     </div>
                 </div>
             </div>
@@ -481,6 +481,7 @@
                     <div class="teamSlide">
                         <div class="flex teamImg">
                             <div class="flex linkOverlay">
+                                <a href="#"><img src="assets/linkedin-icon.svg" alt=""></a>
                             </div>
                             <img src="assets/team1.png" alt="">
                         </div>
@@ -490,6 +491,7 @@
                     <div class="teamSlide">
                         <div class="flex teamImg">
                             <div class="flex linkOverlay">
+                                <a href="#"><img src="assets/linkedin-icon.svg" alt=""></a>
                             </div>
                             <img src="assets/team1.png" alt="">
                         </div>
@@ -499,6 +501,7 @@
                     <div class="teamSlide">
                         <div class="flex teamImg">
                             <div class="flex linkOverlay">
+                                <a href="#"><img src="assets/linkedin-icon.svg" alt=""></a>
                             </div>
                             <img src="assets/team1.png" alt="">
                         </div>
@@ -507,7 +510,9 @@
                     </div>
                     <div class="teamSlide">
                         <div class="flex teamImg">
-                            <div class="flex linkOverlay"></div>
+                            <div class="flex linkOverlay">
+                                <a href="#"><img src="assets/linkedin-icon.svg" alt=""></a>
+                            </div>
                             <img src="assets/team1.png" alt="">
                         </div>
                         <h1>Philip Luis</h1>
@@ -515,7 +520,9 @@
                     </div>
                     <div class="teamSlide">
                         <div class="teamImg">
-                            <div class="linkOverlay"></div>
+                            <div class="flex linkOverlay">
+                                <a href="#"><img src="assets/linkedin-icon.svg" alt=""></a>
+                            </div>
                             <img src="assets/team1.png" alt="">
                         </div>
                         <h1>Philip Luis</h1>
@@ -523,7 +530,9 @@
                     </div>
                     <div class="teamSlide">
                         <div class="flex teamImg">
-                            <div class="flex linkOverlay"></div>
+                            <div class="flex linkOverlay">
+                                <a href="#"><img src="assets/linkedin-icon.svg" alt=""></a>
+                            </div>
                             <img src="assets/team1.png" alt="">
                         </div>
                         <h1>Philip Luis</h1>
@@ -531,7 +540,9 @@
                     </div>
                     <div class="teamSlide">
                         <div class="flex teamImg">
-                            <div class="flex linkOverlay"></div>
+                            <div class="flex linkOverlay">
+                                <a href="#"><img src="assets/linkedin-icon.svg" alt=""></a>
+                            </div>
                             <img src="assets/team1.png" alt="">
                         </div>
                         <h1>Philip Luis</h1>
